...
"back-button-popover-title" = "Tap to go back";
"button-go-back" = "Go back";
"button-next" = "Next";
"button-ok" = "OK";
"button-publish" = "Publish";
...
"close-all-tabs-confirmation-subtitle-with-value" = "Do you want to close {{PLURAL:$1|$1 tab|$1 tabs}}? This action can’t be undone.";
"close-all-tabs-confirmation-title-with-value" = "Close {{PLURAL:$1|$1 tab|$1 tabs}}?";
"close-button-accessibility-label" = "Close";
"close-other-tabs" = "Close other tabs";
"close-tab-confirmation" = "Close tab?";
...
"diff-unedited-lines-format" = "{{PLURAL:$1|$1 line unedited|$1 lines unedited}}";
"diff-user-button-accessibility-text" = "Double tap to open menu";
"dim-images" = "Dim images";
"donate-accessibility-amount-button-hint" = "Double tap to select donation amount.";
"donate-accessibility-donate-hint-format" = "Double tap to donate $1 to the Wikimedia Foundation.";
...
"empty-no-saved-pages-message" = "Save pages to view them later, even offline";
"empty-no-saved-pages-title" = "No saved pages yet";
"empty-no-search-results-message" = "No results found";
"empty-talk-page-title" = "No messages have been posted for this user yet";
"end-session" = "End session";
...
"explore-detail-back-button-title" = "Back to Explore feed";
"explore-enable-location-title" = "Explore articles near your current location";
"explore-featured-article-heading" = "Featured article";
"explore-featured-article-sub-heading-from-language-wikipedia" = "From $1 Wikipedia";
"explore-featured-article-sub-heading-from-wikipedia" = "From Wikipedia";
...
"explore-feed-preferences-turn-on-explore-tab-message" = "This will replace the Settings tab with the Explore tab, you can access Settings from the top of the Explore tab by tapping on the gear icon";
"explore-feed-preferences-turn-on-explore-tab-title" = "Turn on the Explore tab?";
"explore-games-title" = "Games";
"explore-hide-card-prompt" = "Hide this card";
"explore-main-page-description" = "Main page of Wikimedia projects";
...
"games-email-report-body-encountered" = "I have encountered a problem with the Wikipedia games feature:";
"games-email-report-subject" = "Issue Report - Wikipedia games";
"games-wcf-button-play-title" = "Play today's game";
"games-wcf-explore-button-review-title" = "Review results";
"games-wcf-explore-complete-subtitle" = "You scored $1/$2 on today's game. Next game in $3";
"games-wcf-explore-in-progress-subtitle" = "You're on question $1. Continue guessing which event came first on this day in history.";
"games-wcf-explore-title" = "Which came first?";
"gan-variants-alert-body" = "The Wikipedia app now supports the following Gan variants as primary or secondary languages within the app, making it easier to read, search and edit in your preferred variants:\n\n贛語 原文 Gan (gan)\n赣语 简体 Gan, Simplified (gan-hans)\n贛語 繁體 Gan, Traditional (gan-hant)";
"gan-variants-alert-title" = "Updates to Gan variant support";
...
"icon-shortcut-nearby-title" = "Nearby articles";
"icon-shortcut-random-title" = "Random article";
"icon-shortcut-search-title" = "Search Wikipedia";
"image-gallery-unknown-owner" = "Author unknown.";
"image-rec-add-image-title" = "Add this image?";
...
"image-rec-survey-option-5" = "I don’t know this subject";
"image-rec-survey-option-6" = "Other";
"image-rec-survey-submit-button" = "Submit";
"image-rec-survey-title" = "Reason";
"image-rec-title" = "Add image";
...
"search-recent-title" = "Recently searched";
"search-result-redirected-from" = "Redirected from: $1";
"search-title" = "Search";
"search-widget-announcement-body" = "Add the Wikipedia Search widget to your Home or Lock Screen for faster answers, right at your fingertips.";
"search-widget-announcement-title" = "New Search widget available";
...
"serbian-variants-alert-title" = "Updates to Serbian variant support";
"settings-account" = "Account";
"settings-appearance" = "App theme";
"settings-clear-cache" = "Clear cached data";
"settings-clear-cache-are-you-sure-message" = "Clearing cached data will free up about $1 of space. It will not delete your saved pages.";
...
"settings-temp-account-end-session-title" = "Exit session";
"settings-temp-accounts-talk-page-footer" = "Temporary account will expire in 90 days";
"settings-title" = "Settings";
"settings-year-in-review-header" = "Turning off Year in Review will clear all stored personalized insights and hide the Year in Review.";
"share-a-fact-made-with" = "Made with the Wikipedia app";
...
"terms-of-use-title" = "Terms of use";
"theme-black-display-name" = "Black";
"theme-dark-display-name" = "Dark";
"theme-default-display-name" = "Default";
"theme-default-explanation" = "Matches system theme";
...
"welcome-exploration-places-description" = "Discover landmarks near you or search for places across the world";
"welcome-exploration-places-title" = "Places tab";
"welcome-explore-continue-button" = "Get started";
"welcome-explore-new-ways-title" = "New ways to explore";
"welcome-explore-tell-me-more-done-button" = "Got it";
...
"which-came-first-retry-button" = "Retry";
"which-came-first-score" = "You scored $1/$2.";
"which-came-first-see-results-button" = "See Results";
"which-came-first-share-activity-text" = "I'm playing \"Which came first?\" a daily trivia game on the Wikipedia iOS app https://apps.apple.com/app/apple-store/id324715238?pt=208305&ct=wiki_game_202605&mt=8";
"which-came-first-share-score-button" = "Share score";
"which-came-first-share-score-summary" = "I scored $1/$2 on \"Which came first?\" today.";
"which-came-first-share-topics-title" = "Topics included:";
"which-came-first-splash-about-button" = "About this game";
"which-came-first-splash-continue-button" = "Continue today's game";
"which-came-first-splash-review-button" = "Review results";
...
