...
        public let noResultsDescription: String
        public let noResultsRephraseSuggestion: String
        public let noResultsRelatedTopicSuggestion: String

        public init(
            betaTag: String = "Beta",
            headerDescription: String = "Sourced from human generated Wikipedia articles",
            learnMore: String = "Learn more",
            turnOffExperiment: String = "Turn off this experiment",
            rateResult: String = "Rate this result",
            rated: String = "Rated",
            rateThumbsUpAccessibility: String = "Rate thumbs up",
            rateThumbsDownAccessibility: String = "Rate thumbs down",
            semanticResultsEmpty: String = "Enhanced search is temporarily unavailable.",
            errorMessage: String = "Something went wrong. Please try again later.",
            noResultsHeader: String = "No results",
...
